✨ (users): Support multi-user on my nixos module
Also added screenshots in the documentation.

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
     - Features: features.md
     - Customization: customization.md
   - Resources: resources.md
+  - Screenshots: screenshots.md
   - Tasks: tasks.md
 
 plugins:
