--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,8 +27,8 @@ jobs:
     steps:
       - uses: actions/configure-pages@v5
       - uses: actions/checkout@v4
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: DeterminateSystems/determinate-nix-action@v3
+      - uses: DeterminateSystems/flakehub-cache-action@main
       - run: nix -L build .#documentation
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
