--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,6 +13,6 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
-      - uses: DeterminateSystems/determinate-nix-action@v3
+      - uses: samueldr/lix-gha-installer-action@latest
       - uses: DeterminateSystems/flakehub-cache-action@main
-      - run: nix flake check --show-trace
+      - run: nix flake check
