--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
       - uses: actions/configure-pages@v5
       - uses: actions/checkout@v4
-      - uses: DeterminateSystems/determinate-nix-action@v3
+      - uses: samueldr/lix-gha-installer-action@latest
       - uses: DeterminateSystems/flakehub-cache-action@main
       - run: nix -L build .#documentation
       - name: Upload artifact
