Updated the README file and the documentation

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: ❄️ My NixOS Configuration
+site_name: My NixOS Configuration
 site_url: https://github.com/theobori/nixos-configuration
 repo_url: https://github.com/theobori/nixos-configuration
 repo_name: theobori/nixos-configuration
