--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,6 +13,9 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
+      - uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - uses: samueldr/lix-gha-installer-action@latest
       - uses: DeterminateSystems/flakehub-cache-action@main
       - run: nix flake check
