--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,6 +27,9 @@ jobs:
     steps:
       - uses: actions/configure-pages@v5
       - uses: actions/checkout@v4
+      - uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - uses: samueldr/lix-gha-installer-action@latest
       - uses: DeterminateSystems/flakehub-cache-action@main
       - run: nix -L build .#documentation
