--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
     - Features: features.md
     - Customization: customization.md
   - Resources: resources.md
+  - Secrets: secrets.md
   - Screenshots: screenshots.md
   - Tasks: tasks.md
 
